  certain configurations (redhat software collections).  Thanks David Riddle.

- fix issue246: fix regression in config parsing by reordering 
  such that {envbindir} can be used again in tox.ini. Thanks Olli Walsh.

- fix issue99: the {env:...} substitution now properly uses environment
  settings from the ``setenv`` section. Thanks Itxaka Serrano.


2.1.1
----------

- fix platform skipping for detox

- report skipped platforms as skips in the summary

2.1.0
----------

- fix issue258, fix issue248, fix issue253: for non-test commands 
  (installation, venv creation) we pass in the full invocation environment.

- remove experimental --set-home option which was hardly used and
  hackily implemented (if people want home-directory isolation we should
  figure out a better way to do it, possibly through a plugin)

- fix issue259: passenv is now a line-list which allows to intersperse
  comments.  Thanks stefano-m.

- allow envlist to be a multi-line list, to intersperse comments
  and have long envlist settings split more naturally.  Thanks Andre Caron.

- introduce a TOX_TESTENV_PASSENV setting which is honored
  when constructing the set of environment variables for test environments.
  Thanks Marc Abramowitz for pushing in this direction.


2.0.2
----------

- fix issue247: tox now passes the LANG variable from the tox invocation 
  environment to the test environment by default.

- add SYSTEMDRIVE into default passenv on windows to allow pip6 to work.
  Thanks Michael Krause.


2.0.1
-----------

- fix wheel packaging to properly require argparse on py26.

2.0.0
-----------

- (new) introduce environment variable isolation:
  tox now only passes the PATH and PIP_INDEX_URL variable from the tox
  invocation environment to the test environment and on Windows 
  also ``SYSTEMROOT``, ``PATHEXT``, ``TEMP`` and ``TMP`` whereas
  on unix additionally ``TMPDIR`` is passed.  If you need to pass 